--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -37,7 +37,7 @@
     @apply text-[16px]  scroll-smooth;
   }
   body {
-    @apply font-body bg-slate-50 dark:bg-gelap-950 text-merah-900  dark:text-slate-300;
+    @apply font-body bg-slate-50 dark:bg-merah-950 text-merah-900  dark:text-slate-300;
   }
   h1,
   h2,
