--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -28,7 +28,7 @@
     @apply text-balance mb-4 md:mb-6 py-2 md:text-4xl  text-3xl font-bold ;
   }
   .subheadline {
-    @apply mt-3 mb-6 text-center max-w-3xl text-lg md:text-2xl tracking-wide m-0 p-0 dark:text-kuning mx-auto;
+    @apply mt-3 mb-6 text-center max-w-3xl text-lg md:text-2xl tracking-wide m-0 p-0 text-merah-950 dark:text-kuning mx-auto;
   }
 }
 
