Update app configuration, add search API, and enhance component styles; fix image sources and improve performance metrics

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -37,7 +37,7 @@
     @apply text-[17px]  scroll-smooth;
   }
   body {
-    @apply font-body bg-slate-50 dark:bg-merah-950 text-merah-900  dark:text-slate-300;
+    @apply font-body bg-slate-50 dark:bg-slate-950 text-merah-900  dark:text-slate-300;
   }
   h1,
   h2,
